<resources>
    <string name="app_name">TheFlasherApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="id_label">The UserID is</string>
    <string name="id_value">[UserId]</string>
    <string name="location_label">Current location is</string>
    <string name="location_value">[Location]</string>
    <string name="firstName_label">FirstName</string>
    <string name="firstName_value">[FirstName]</string>
    <string name="lastName_label">LastName</string>
    <string name="lastName_value">[LastName]</string>
    <string name="num_label">Number</string>
    <string name="num_value">[Number]</string>
    <string name="email_label">Email</string>
    <string name="email_value">[Email]</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="base_uri">https://hj07rv3r9k.execute-api.us-east-2.amazonaws.com/test</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
</resources>
