<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft = "@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserInfoActivity$PlaceholderFragment">

    <TextView

        android:id="@+id/id_label"
        android:text="@string/id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/location_label_label"
        android:text="@string/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/firstName_label"
        android:text="@string/firstName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/location_label_label"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/lastName_label"
        android:text="@string/lastName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/firstName_label"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/num_label"
        android:text="@string/num_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/lastName_label"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/email_label"
        android:text="@string/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/num_label"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/id_value"
        android:text="@string/id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/id_label"
        android:layout_marginLeft="50dp" />

    <TextView
        android:id="@+id/location_value"
        android:text="@string/location_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/location_label_label"
        android:layout_alignLeft="@+id/id_value" />
    <TextView
        android:id="@+id/firstName_value"
        android:text="@string/firstName_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/location_label_label"
        android:layout_alignLeft="@+id/id_value" />
    <TextView
        android:id="@+id/lastName_value"
        android:text="@string/lastName_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/firstName_label"
        android:layout_alignLeft="@+id/id_value" />
    <TextView
        android:id="@+id/num_value"
        android:text="@string/num_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/lastName_label"
        android:layout_alignLeft="@+id/id_value" />
    <TextView
        android:id="@+id/email_value"
        android:text="@string/email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/num_label"
        android:layout_alignLeft="@+id/id_value" />

</RelativeLayout>